--- a/resources/assets/sass/modules/_sizes.scss
+++ b/resources/assets/sass/modules/_sizes.scss
@@ -33,6 +33,8 @@ html, body, *{
 	position:absolute;
 	top: 0;
 	left: 300px;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 .the-right{
@@ -72,3 +74,15 @@ html, body, *{
 	padding: 12px;
 }
 
+.the-dropzone{
+    position: fixed;
+    pointer-events: none;
+    top: 0;
+    right: 0;
+    width: 199px;
+    bottom: 0;
+    background: white;
+    border: 2px dashed;
+    text-align: center;
+    padding-top: 23vh;
+}
