--- a/resources/assets/sass/modules/_canvas.scss
+++ b/resources/assets/sass/modules/_canvas.scss
@@ -18,4 +18,13 @@
 
 }
 
+.canvas-pointer{
+	position      : absolute;
+	border        : 4px solid green;
+	left          : 0;
+	top           : 0;
+	width         : 0;
+	height        : 0;
+	cursor        : pointer;
+}
 
